--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 html 
     head 
         title #{title}
-        link(rel='stylesheet' href='/bower_components/bootstrap/dist/css/bootstrap.css')
+        link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous")
         link(rel='stylesheet' href='/css/style.css')
     body
         .container
@@ -27,7 +27,8 @@ html
             hr
             footer 
                 p Copyright &copy; 2021
-        script(src='/bower_components/jquery/dist/jquery.js')  
-        script(src='/bower_components/bootstrap/dist/js/bootstrap.js')
+        script(src="https://code.jquery.com/jquery-3.6.0.min.js")  
+        script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous")
+        script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous")
         script(src='/js/main.js')
         script(src='//cdn.jsdelivr.net/npm/sweetalert2@11')
