--- a/views/layout.pug
+++ b/views/layout.pug
@@ -21,6 +21,8 @@ html
                                 a.nav-link.disabled(href='/view/add') Add
                             li.nav-item
                                 a.nav-link(href='/adenda/') Adenda
+                            li.nav-item
+                                a.nav-link(href='/Cotizador/') Cotizacion
         .container 
             block content
             br
