agregado los Modelos para la Cotizacion y sus consultas

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -22,7 +22,7 @@ html
                             li.nav-item
                                 a.nav-link(href='/adenda/') Adenda
                             li.nav-item
-                                a.nav-link(href='/Cotizador/') Cotizacion
+                                a.nav-link(href='/cotizador/') Cotizacion
         .container 
             block content
             br
