Cambio en la vista del Layout para no mostrar el formulario de Cotizador y modificada la ruta cotizador GET

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -21,8 +21,8 @@ html
                                 a.nav-link.disabled(href='/view/add') Add
                             li.nav-item
                                 a.nav-link(href='/adenda/') Adenda
-                            li.nav-item
-                                a.nav-link(href='/cotizador/') Cotizacion
+                            //- li.nav-item
+                            //-     a.nav-link(href='/cotizador/') Cotizacion                                 
         .container 
             block content
             br
